[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Background.jpg" type="Texture" id=1]
[ext_resource path="res://scripts/GameLogic.gd" type="Script" id=2]
[ext_resource path="res://assets/CatPlay.png" type="Texture" id=3]
[ext_resource path="res://assets/CatBathe.png" type="Texture" id=4]
[ext_resource path="res://assets/CatHungry.png" type="Texture" id=5]
[ext_resource path="res://assets/CatSleep.png" type="Texture" id=6]

[node name="Main" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_right = 1361.0
margin_bottom = 686.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 685, 342 )
scale = Vector2( 1.32617, 0.911458 )
texture = ExtResource( 1 )

[node name="ProgressBar" type="ProgressBar" parent="Control"]
anchor_left = 0.142
anchor_top = 0.088
anchor_right = 0.282
anchor_bottom = 0.175
margin_left = 5.62999
margin_top = 0.189995
margin_right = 0.225983
margin_bottom = -0.0100098
custom_colors/font_color = Color( 1, 0.784314, 0.909804, 1 )
custom_colors/font_color_shadow = Color( 0.898039, 0.388235, 0.388235, 1 )

[node name="ButtonEat" type="Button" parent="Control"]
anchor_left = 0.102
anchor_top = 0.794
anchor_right = 0.269
anchor_bottom = 0.907
margin_left = 0.178009
margin_top = 0.315979
margin_right = -0.0670471
margin_bottom = 0.257935
rect_min_size = Vector2( 10, 10 )
custom_colors/font_color_disabled = Color( 0.988235, 0.988235, 0.988235, 1 )
custom_colors/font_color_focus = Color( 0.929412, 0.682353, 0.682353, 1 )
custom_colors/font_color = Color( 0.894118, 0.556863, 0.556863, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0.670588, 0.670588, 1 )
custom_colors/font_color_pressed = Color( 0.941176, 0.65098, 0.65098, 1 )
text = "comer"
icon_align = 1

[node name="ButtonPlay" type="Button" parent="Control"]
anchor_left = 0.317
anchor_top = 0.786
anchor_right = 0.5
anchor_bottom = 0.909
margin_left = -0.436981
margin_top = -0.195984
margin_right = -8.19794
margin_bottom = -0.253967
text = "jugar"

[node name="ButtonBathe" type="Button" parent="Control"]
anchor_left = 0.554
anchor_top = 0.783
anchor_right = 0.738
anchor_bottom = 0.908
margin_left = 0.00598145
margin_top = -0.138062
margin_right = 0.58197
margin_bottom = 0.111938
text = "ba√±arse"

[node name="ButtonSleep" type="Button" parent="Control"]
anchor_left = 0.784
anchor_top = 0.786
anchor_right = 0.946
anchor_bottom = 0.902
margin_left = -0.0240479
margin_top = -0.195984
margin_right = 1.4939
margin_bottom = 3.22797
text = "dormir"

[node name="PopupDialog" type="PopupDialog" parent="Control"]
anchor_left = 0.393
anchor_top = 0.343
anchor_right = 0.611
anchor_bottom = 0.561
margin_left = 0.127014
margin_top = -0.298019
margin_right = 0.429016
margin_bottom = 0.153961

[node name="NameInput" type="LineEdit" parent="Control/PopupDialog"]
anchor_left = 0.249
anchor_top = 0.153
anchor_right = 0.721
anchor_bottom = 0.48
margin_left = 0.0469971
margin_top = 0.0499973
margin_right = -0.137009

[node name="CallInput" type="LineEdit" parent="Control/PopupDialog"]
anchor_left = 0.253
anchor_top = 0.56
anchor_right = 0.71
anchor_bottom = 0.847
margin_left = -0.141006
margin_right = 0.12999
margin_bottom = -0.0500107

[node name="ConfirmButton" type="Button" parent="Control/PopupDialog"]
anchor_left = 0.357
anchor_top = 0.4
anchor_right = 0.572
anchor_bottom = 0.593
margin_left = -0.029007
margin_right = 0.115997
margin_bottom = 0.0499954

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.354
anchor_right = 0.769
anchor_bottom = 0.539
margin_left = 6.5
margin_top = 0.156006
margin_right = 0.390869
margin_bottom = 0.245972

[node name="HungerSprite" type="Sprite" parent="Control"]
position = Vector2( 674, 358 )
scale = Vector2( 0.246094, 0.265625 )
texture = ExtResource( 5 )

[node name="PlaySprite" type="Sprite" parent="Control"]
position = Vector2( 671, 358 )
scale = Vector2( 0.257813, 0.28125 )
texture = ExtResource( 3 )

[node name="BatheSprite" type="Sprite" parent="Control"]
position = Vector2( 669, 357 )
scale = Vector2( 0.269043, 0.276042 )
texture = ExtResource( 4 )

[node name="SleepSprite" type="Sprite" parent="Control"]
position = Vector2( 669, 357 )
scale = Vector2( 0.276794, 0.274495 )
texture = ExtResource( 6 )

[node name="CatSonrie" type="Sprite" parent="Control"]
